@@ -16,58 +16,29 @@
 package example;
 
 import io.micronaut.runtime.Micronaut;
-
-/**
- * @author Graeme Rocher
- * @since 1.0
- */
-import io.swagger.v3.oas.annotations.*;
-import io.swagger.v3.oas.annotations.info.*;
-import io.swagger.v3.oas.annotations.tags.*;
-import io.swagger.v3.oas.annotations.servers.*;
-import io.swagger.v3.oas.annotations.security.*;
+import io.swagger.v3.oas.annotations.OpenAPIDefinition;
 
 import java.lang.management.ManagementFactory;
 import java.lang.management.RuntimeMXBean;
 
 
-/**
- * @author graemerocher
- * @since 1.0
- */
-@OpenAPIDefinition(
-        info = @Info(
-                title       = "Hello World",
-                version     = "1.0",
-                description = "API",
-                license     = @License(name = "Apache 2.0", url = "http://foo.bar"),
-                contact     = @Contact(url = "http://gigantic-server.com", name = "Fred", email = "Fred@gigagantic-server.com")
-        ),
-        tags = {
-                @Tag(name = "Tag 1", description = "desc 1", externalDocs = @ExternalDocumentation(description = "docs desc")),
-                @Tag(name = "Tag 2", description = "desc 2", externalDocs = @ExternalDocumentation(description = "docs desc 2")),
-                @Tag(name = "Tag 3")
-        },
-        externalDocs = @ExternalDocumentation(description = "definition docs desc"),
-        security = {
-                @SecurityRequirement(name = "req 1", scopes = {"a", "b"}),
-                @SecurityRequirement(name = "req 2", scopes = {"b", "c"})
-        },
-        servers = {
-                @Server(
-                        description = "server 1",
-                        url = "http://foo",
-                        variables = {
-                                @ServerVariable(name = "var1", description = "var 1", defaultValue = "1", allowableValues = {"1", "2"}),
-                                @ServerVariable(name = "var2", description = "var 2", defaultValue = "1", allowableValues = {"1", "2"})
-                        })
-        }
-)
+@OpenAPIDefinition()
 public class Application {
     private static final RuntimeMXBean RUNTIME_MX_BEAN = ManagementFactory.getRuntimeMXBean();
     private static final long          NOW             = System.currentTimeMillis();
 
 
+    /**
+     * Build:
+     * ./gradlew clean build
+     *
+     * Start up:
+     *  java -jar build/libs/example-1.0-all.jar (Interpreter + Tiered Compiliation (C1 + C2))
+     *   java -Xint -jar build/libs/example-1.0-all.jar (Interpreter only)
+     *  java -Xverify:none -XX:TieredStopAtLevel=1 -jar build/libs/example-1.0-all.jar (No bytecode verification and only C1 compiler)
+     *
+     * @param args
+     */
     public static void main(String[] args) {
         System.out.println("---------- Example ------------------");
         System.out.println("JVM Vendor : " + RUNTIME_MX_BEAN.getVmVendor());
